* Added support for printing info of loaded RRD files.
* Updated TODO.
* Updated example4 to use current times instead of the times for when the
examples were originally written (2005).
* Added a string coercion before doing a split on dateOrData.
* Removed old docstrings.
* Improved getData mapper methods to descend into sub-objects.
* Improved the output format of the external fetch function.

2009.01.29

* Updated the TODO with thoughts/plans for implementing an info method.
* Started stubbing out the code that will support loading data from files (and
thus an info method).
* Added a reference directory with the dump dtd in it.
* Added acknowledgements to README.
* Removed the testing sandbox in trunk.
* Renamed "read" to "load".
* Added dump function with doctests.
* Added working code and doctests for loading an RRD XML dump file as an
ElementTree instance.
* Added an XML module for extracting data from RRD dumps.
* Removed stubbed mapper objects from rrd module.
* Added mapper module for mapping ElementTree XML nodes to Python objects with
attributes.
* With the use of slots, removed __dict__ references.

2009.01.28

* Updated the old admin scripts to use bazaar.
* Added more scripts, including definitions for pushing back up to Google Code
(Subversion).
* Added a fix for Windows users. Fixes: http://code.google.com/p/pyrrd/issues/detail?id=1
* Cleaned up the backend module a tiny bit.
* White space cleanup.
* Added a fix for named parameters in the DataSource class. 
  Fixes: http://code.google.com/p/pyrrd/issues/detail?id=2
* Added Google Code to the admin push script.
* Fixed missing named parameter in RRA class.
* Fixed missing named parameter in RRD class.
* Added a NotImplementedError for the fetch method.
* Updated TODO.
* Added missing named parameters in VariableDefinition class.
* Added missing named parameters in CalculationDefinition class.
* Updated test runner.
* Updated README with links.
* Updated commit script to run test runner.