@@ -15,6 +15,8 @@ examples were originally written (2005).
 * Removed old docstrings.
 * Improved getData mapper methods to descend into sub-objects.
 * Improved the output format of the external fetch function.
+* Fixed the external fetch and made the output format more usable.
+* Added support for a fetch method on the RRD class.
 
 2009.01.29
 
